--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   google_fonts: ^6.2.1
   carousel_slider: ^5.0.0
+  intl: ^0.19.0
+  lottie: ^3.1.3
+  dartz: ^0.10.1
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+  flutter_gen: ^5.8.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
